--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	url = ../trijunction-design-data
 	path = data
 [submodule "codes/spin-qubit"]
-	path = codes/spin-qubit
+	path = ./spin-qubit
 	url = https://gitlab.kwant-project.org/qt/spin-qubit.git
