--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "data"]
 	url = ../trijunction-design-data
 	path = data
-[submodule "codes/spin-qubit"]
+[submodule "spin-qubit"]
 	path = ./spin-qubit
 	url = https://gitlab.kwant-project.org/qt/spin-qubit.git
