--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "data"]
-	url = ../trijunction-design-data
+	url = https://gitlab.kwant-project.org/qt/trijunction-design-data
 	path = data
 [submodule "spin-qubit"]
-	path = ./spin-qubit
-	url = https://gitlab.kwant-project.org/qt/spin-qubit.git
+	path = spin-qubit
+	url = https://gitlab.kwant-project.org/qt/spin-qubit
